traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:3: error: not found: value a
    a = getX()
    ^TraversalByColumn:4: error: not found: value b
    b = getY()
    ^TraversalByColumn:6: error: not found: value b
    if (b==getMondeHauteur()) {
        ^TraversalByColumn:7: error: not found: value a
      setPos(a+1,0); ecritMessage(cpt)
             ^TraversalByColumn:9: error: not found: value a
      setPos(a,y+1); ecritMessage(cpt)
             ^TraversalByColumn:9: error: not found: value y
      setPos(a,y+1); ecritMessage(cpt)
               ^