traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var cpt: Int = 0
  while (getMondeHauteur() != getY() && getMondeLargeur() != getY()) {
    a = getX()
    b = getY()
    cpt += 1;
    if (b==getMondeHauteur()) {
      setPos(a+1,0); ecritMessage(cpt)
    } else {
      setPos(a,y+1); ecritMessage(cpt)
    }
  }
}